tests/examples/bad/bad3.mc
int f(int a) {
    int x;
    x = a * 2;
    // ERROR: falta return
}

int main() {
    return f(5);
}
